--- a/Lumo/Resources/Views/Diary/Edit.en.resx
+++ b/Lumo/Resources/Views/Diary/Edit.en.resx
@@ -117,31 +117,52 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Diary" xml:space="preserve">
-    <value>Diary</value>
+  <data name="BackToCalendar" xml:space="preserve">
+    <value>Back to Calendar</value>
   </data>
-  <data name="Favorites" xml:space="preserve">
-    <value>Favorites</value>
+  <data name="ContentLabel" xml:space="preserve">
+    <value>Content</value>
   </data>
-  <data name="Hello" xml:space="preserve">
-    <value>Hello</value>
+  <data name="DateLabel" xml:space="preserve">
+    <value>Date</value>
   </data>
-  <data name="Home" xml:space="preserve">
-    <value>Home</value>
+  <data name="EditHeader" xml:space="preserve">
+    <value>Edit Memory</value>
   </data>
-  <data name="Logout" xml:space="preserve">
-    <value>Logout</value>
+  <data name="EditTitle" xml:space="preserve">
+    <value>Edit Entry</value>
   </data>
-  <data name="Privacy" xml:space="preserve">
-    <value>Privacy</value>
+  <data name="ErrorSave" xml:space="preserve">
+    <value>Error while saving changes.</value>
   </data>
-  <data name="Profile" xml:space="preserve">
-    <value>Profile</value>
+  <data name="FavoriteLabel" xml:space="preserve">
+    <value>Favorite ⭐</value>
   </data>
-  <data name="Statistics" xml:space="preserve">
-    <value>Statistics</value>
+  <data name="Mood1" xml:space="preserve">
+    <value>😢 Very Bad</value>
   </data>
-  <data name="Tags" xml:space="preserve">
+  <data name="Mood2" xml:space="preserve">
+    <value>☹️ Bad</value>
+  </data>
+  <data name="Mood3" xml:space="preserve">
+    <value>😐 Neutral</value>
+  </data>
+  <data name="Mood4" xml:space="preserve">
+    <value>🙂 Good</value>
+  </data>
+  <data name="Mood5" xml:space="preserve">
+    <value>😄 Excellent</value>
+  </data>
+  <data name="MoodLabel" xml:space="preserve">
+    <value>Mood</value>
+  </data>
+  <data name="SaveChanges" xml:space="preserve">
+    <value>Save changes</value>
+  </data>
+  <data name="TagsLabel" xml:space="preserve">
     <value>Tags</value>
+  </data>
+  <data name="TitleLabel" xml:space="preserve">
+    <value>Title</value>
   </data>
 </root>
