--- a/Lumo/Resources/Views/Diary/Index.pl.resx
+++ b/Lumo/Resources/Views/Diary/Index.pl.resx
@@ -117,31 +117,76 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Diary" xml:space="preserve">
-    <value>Diary</value>
-  </data>
-  <data name="Favorites" xml:space="preserve">
-    <value>Favorites</value>
-  </data>
-  <data name="Hello" xml:space="preserve">
-    <value>Hello</value>
-  </data>
-  <data name="Home" xml:space="preserve">
-    <value>Home</value>
-  </data>
-  <data name="Logout" xml:space="preserve">
-    <value>Logout</value>
-  </data>
-  <data name="Privacy" xml:space="preserve">
-    <value>Privacy</value>
-  </data>
-  <data name="Profile" xml:space="preserve">
-    <value>Profile</value>
-  </data>
   <data name="Statistics" xml:space="preserve">
-    <value>Statistics</value>
+    <value>Statystyki</value>
   </data>
-  <data name="Tags" xml:space="preserve">
-    <value>Tags</value>
+  <data name="FilterHeader" xml:space="preserve">
+    <value>Filtruj:</value>
+  </data>
+  <data name="AllTags" xml:space="preserve">
+    <value>Wszystkie</value>
+  </data>
+  <data name="AddNewEntry" xml:space="preserve">
+    <value>Dodaj nowy wpis</value>
+  </data>
+  <data name="HideForm" xml:space="preserve">
+    <value>Ukryj formularz</value>
+  </data>
+  <data name="TitleLabel" xml:space="preserve">
+    <value>Tytuł</value>
+  </data>
+  <data name="TitlePlaceholder" xml:space="preserve">
+    <value>Tytuł wpisu...</value>
+  </data>
+  <data name="ContentLabel" xml:space="preserve">
+    <value>Treść</value>
+  </data>
+  <data name="ContentPlaceholder" xml:space="preserve">
+    <value>Napisz co myślisz...</value>
+  </data>
+  <data name="TagsLabel" xml:space="preserve">
+    <value>Tagi</value>
+  </data>
+  <data name="DateLabel" xml:space="preserve">
+    <value>Data</value>
+  </data>
+  <data name="MoodLabel" xml:space="preserve">
+    <value>Nastrój</value>
+  </data>
+  <data name="MoodVeryBad" xml:space="preserve">
+    <value>😢 Bardzo źle</value>
+  </data>
+  <data name="MoodBad" xml:space="preserve">
+    <value>☹️ Źle</value>
+  </data>
+  <data name="MoodNeutral" xml:space="preserve">
+    <value>😐 Neutralnie</value>
+  </data>
+  <data name="MoodGood" xml:space="preserve">
+    <value>🙂 Dobrze</value>
+  </data>
+  <data name="MoodExcellent" xml:space="preserve">
+    <value>😄 Wyśmienicie</value>
+  </data>
+  <data name="FavoriteLabel" xml:space="preserve">
+    <value>Ulubione ⭐</value>
+  </data>
+  <data name="AddEntryBtn" xml:space="preserve">
+    <value>Dodaj wpis</value>
+  </data>
+  <data name="CalendarHeader" xml:space="preserve">
+    <value>Kalendarz wpisów</value>
+  </data>
+  <data name="Prev" xml:space="preserve">
+    <value>Wstecz</value>
+  </data>
+  <data name="Next" xml:space="preserve">
+    <value>Dalej</value>
+  </data>
+  <data name="Today" xml:space="preserve">
+    <value>Dzisiaj</value>
+  </data>
+  <data name="ConfirmDelete" xml:space="preserve">
+    <value>Czy na pewno chcesz usunąć ten wpis?</value>
   </data>
 </root>
