--- a/Lumo/Resources/Views/Account/Manage.pl.resx
+++ b/Lumo/Resources/Views/Account/Manage.pl.resx
@@ -117,34 +117,40 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ConfirmDelete" xml:space="preserve">
-    <value>Are you sure you want to delete this memory?</value>
+  <data name="AccountSettings" xml:space="preserve">
+    <value>Ustawienia Konta</value>
   </data>
-  <data name="EmptyStateText" xml:space="preserve">
-    <value>Mark diary entries as ⭐ favorite to see them here.</value>
+  <data name="BasicInfo" xml:space="preserve">
+    <value>Informacje Podstawowe</value>
   </data>
-  <data name="EmptyStateTitle" xml:space="preserve">
-    <value>No favorite entries yet</value>
+  <data name="CurrentPassLabel" xml:space="preserve">
+    <value>Aktualne hasło</value>
   </data>
-  <data name="ErrorDelete" xml:space="preserve">
-    <value>Error deleting entry.</value>
+  <data name="EmailLabel" xml:space="preserve">
+    <value>Adres Email</value>
   </data>
-  <data name="FavoriteBadge" xml:space="preserve">
-    <value>⭐ Favorite</value>
+  <data name="NewPassLabel" xml:space="preserve">
+    <value>Nowe hasło</value>
   </data>
-  <data name="FavoritesHeader" xml:space="preserve">
-    <value>⭐ Favorite Entries</value>
+  <data name="NicknameLabel" xml:space="preserve">
+    <value>Pseudonim</value>
   </data>
-  <data name="FavoritesSubheader" xml:space="preserve">
-    <value>Your most meaningful memories</value>
+  <data name="NicknamePlaceholder" xml:space="preserve">
+    <value>Wpisz swój pseudonim</value>
   </data>
-  <data name="FavoritesTitle" xml:space="preserve">
-    <value>Favorite Entries</value>
+  <data name="ProfileTitle" xml:space="preserve">
+    <value>Mój Profil</value>
   </data>
-  <data name="NotFavoriteBadge" xml:space="preserve">
-    <value>Not Favorite</value>
+  <data name="SecurityHeader" xml:space="preserve">
+    <value>Bezpieczeństwo</value>
   </data>
-  <data name="ViewBtn" xml:space="preserve">
-    <value>View</value>
+  <data name="SecurityNote" xml:space="preserve">
+    <value>zostaw puste, aby zachować obecne</value>
+  </data>
+  <data name="ConfirmPassLabel" xml:space="preserve">
+    <value>Potwierdź hasło</value>
+  </data>
+  <data name="SaveBtn" xml:space="preserve">
+    <value>Zapisz zmiany</value>
   </data>
 </root>
