--- a/Lumo/Resources/Views/Tag/Index.pl.resx
+++ b/Lumo/Resources/Views/Tag/Index.pl.resx
@@ -123,11 +123,17 @@
   <data name="AddTagBtn" xml:space="preserve">
     <value>Dodaj tag</value>
   </data>
+  <data name="CancelBtn" xml:space="preserve">
+    <value>Anuluj</value>
+  </data>
   <data name="ConfirmDeleteTag" xml:space="preserve">
     <value>Czy na pewno chcesz usunąć ten tag?</value>
   </data>
   <data name="DeleteBtn" xml:space="preserve">
     <value>Usuń</value>
+  </data>
+  <data name="EditBtn" xml:space="preserve">
+    <value>Edytuj</value>
   </data>
   <data name="ErrorCreateTag" xml:space="preserve">
     <value>Błąd podczas tworzenia tagu:</value>
@@ -143,6 +149,9 @@
   </data>
   <data name="ManageTagsTitle" xml:space="preserve">
     <value>Zarządzaj Tagami</value>
+  </data>
+  <data name="SaveBtn" xml:space="preserve">
+    <value>Zapisz</value>
   </data>
   <data name="TagNameLabel" xml:space="preserve">
     <value>Nazwa tagu</value>
