bugfixing issues with dto and languages

--- a/Lumo/Resources/Views/Tag/Index.en.resx
+++ b/Lumo/Resources/Views/Tag/Index.en.resx
@@ -136,7 +136,7 @@
     <value>Edit</value>
   </data>
   <data name="ErrorCreateTag" xml:space="preserve">
-    <value>Error creating tag:</value>
+    <value>Error creating tag: Maximum length is 20</value>
   </data>
   <data name="ErrorDeleteTag" xml:space="preserve">
     <value>Failed to delete tag.</value>
